<resources>
    <string name="app_name">E-Monitoria</string>
    <string name="password">Senha</string>
    <string name="email">E-mail</string>
    <string name="sign_in">Entrar</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="access_by">Acessar via</string>
    <string name="welcome">Bem-vindo,</string>
    <string name="welcome_instructions">Por favor autentique-se para continuar.</string>
    <string name="forgot_password">Esqueceu a senha?</string>
</resources>