<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp">
    <!--    tools:context=".signIn.SignInFragment"-->


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@id/welcome_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/welcome_instructions"
        android:textColor="@color/gray_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_email"
        style="@style/TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toTopOf="@id/edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_instructions"

        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_password"
        style="@style/TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunito_semibold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/nunito_semibold"
        android:foreground="?selectableItemBackground"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/nunito_semibold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/access_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password" />

    <TextView
        android:id="@+id/access_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/access_by"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <TextView
        android:id="@+id/btn_facebook"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/nunito_bold"
        android:foreground="?selectableItemBackground"
        android:text="@string/facebook"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_facebook"
        app:layout_constraintEnd_toStartOf="@+id/btn_google"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/access_label"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/btn_google"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/nunito_bold"
        android:foreground="?selectableItemBackground"
        android:text="@string/google"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_facebook"
        app:layout_constraintTop_toBottomOf="@+id/access_label"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>